# pdf-craft

./: .editorconfig  .gitignore  .pylintrc  FIXME.md  README.md  README_zh-CN.md  format.template.json  main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_reader.py
.github/workflows/: build.yml  merge-build.yml  pr-check.yml
docs/: DEVELOPMENT.md  INSTALLATION.md  INSTALLATION_zh-CN.md  RELEASE.md
docs/changelog/: v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md
pdf_craft/: __init__.py  config.py  error.py  errors.py  expression.py  functions.py  language.py  markdown.py  metering.py  parallel.py  pdf.py  pdf_parser.py  to_path.py  transform.py  xml.py
pdf_craft/ai/: format.py  prompt.jinja
pdf_craft/analyser/: __init__.py  analyse.py  asset_matcher.py  chapter.py  chunk_file.py  citation.py  group.py  index.py  llm.py  main_text.py  meta.py  next_step.py  ocr_extractor.py  page.py  page_and_index.py  page_clipper.py  page_structure.py  position.py  preliminary.py  secondary.py  segment.py  serial.py  state_machime.py  state_machine.py  types.py  utils.py  window.py
pdf_craft/analyser/prompts/: chapter.jinja  citation.jinja  index.jinja  main_text.jinja  page_structure.jinja  preliminary.jinja
pdf_craft/analyser/splitter/: __init__.py  clipper.py  page_clipper.py  segment.py
pdf_craft/analysers/: __init__.py  analyser.py  context.py  data.py  output.py  range_state.py  reporter.py  sequence.py  types.py  utils.py  window.py
pdf_craft/analysers/chapter/: __init__.py  common.py  contents_binder.py  contents_mapper.py  fragment.py  generation.py  listdir.py  patcher.py
pdf_craft/analysers/contents/: __init__.py  collection.py  common.py  contents_extractor.py  type.py  utils.py
pdf_craft/analysers/correction/: __init__.py  common.py  corrector.py  executor.py  multiple_corrector.py  paragraphs_reader.py  (+2 more)
pdf_craft/common/: __init__.py  asset.py  cv_splitter.py  folder.py  reader.py  statistics.py  xml.py
pdf_craft/epub/: __init__.py  assets.py  context.py  gen_asset.py  gen_epub.py  gen_files.py  gen_formula.py  gen_index.py  gen_part.py  latex_to_text.py  render.py  toc_collection.py  types.py
pdf_craft/llm/: context.py  core.py  error.py  escape.py  executor.py  increasable.py  node.py
pdf_craft/markdown/: footnotes.py  layouts.py  parser.py  render.py  types.py
pdf_craft/pdf/: __init__.py  asset.py  document.py  extractor.py  handler.py  ngrams.py  ocr.py  page.py  page_extractor.py  page_ref.py  pdf_adapter.py  pdf_adapter_default.py  reader.py  section.py  stream.py  text_matcher.py  types.py  utils.py
pdf_craft/sequence/: __init__.py  analyse_level.py  chapter.py  content.py  expression.py  gen_toc.py  generation.py  jointer.py  mark.py  mergeable.py  pages_reader.py  punctuation.py  reader.py  reading_serials.py  reference.py  render.py
pdf_craft/toc/: __init__.py  analyse.py  analysing.py  finder.py  gen_toc.py  generation.py  item.py  llm_analyser.py  text.py  toc_levels.py  toc_levels_by_llm.py  toc_pages.py  types.py
pdf_craft/xml/: __init__.py  decoder.py  encoder.py  parser.py  tag.py  transform.py
scripts/: analyse_pdf.py  clean_analysing.py  gen_epub.py  gen_md.py  generate_epub.py  generate_markdown.py  lint.sh  list_prompt_tokens.py  secondary_analyse.py  secondary_chapters.py  secondary_citations.py  secondary_main_texts.py  setup.sh  structure_pdf.py  sync-doc-page-extractor.sh  sync-epub-generator.sh  sync-resource-segmentation.sh  sync.sh
tests/: test_cv_splitter.py  test_expression.py  test_framework.py  test_group.py  test_index.py  test_jointer.py  test_mergeable.py  test_page_clipper.py  test_parallel.py  test_parser.py  test_pdf.py  test_punctuation.py  test_reading_serials.py  test_segment.py  test_serial.py  test_table_rendering.py  test_text_matching.py  test_toc_llm_analyser.py  test_toc_text.py  test_xml.py
(+75 files in other folders)
